--- a/app/assets/stylesheets/framework_and_overrides.css.scss
+++ b/app/assets/stylesheets/framework_and_overrides.css.scss
@@ -80,3 +80,43 @@ section {
   @extend .btn-primary;
   @extend .btn-xs;
 }
+
+.language-relationship {
+  display: inline-block;
+  width: 158px;
+  -webkit-transition: all 300ms cubic-bezier(0.420, 0.000, 1.000, 1.000);
+     -moz-transition: all 300ms cubic-bezier(0.420, 0.000, 1.000, 1.000);
+       -o-transition: all 300ms cubic-bezier(0.420, 0.000, 1.000, 1.000);
+          transition: all 300ms cubic-bezier(0.420, 0.000, 1.000, 1.000); /* ease-in */
+
+  -webkit-transition-timing-function: cubic-bezier(0.420, 0.000, 1.000, 1.000);
+     -moz-transition-timing-function: cubic-bezier(0.420, 0.000, 1.000, 1.000);
+       -o-transition-timing-function: cubic-bezier(0.420, 0.000, 1.000, 1.000);
+          transition-timing-function: cubic-bezier(0.420, 0.000, 1.000, 1.000); /* ease-in */
+}
+
+p.language-name {
+  float: left;
+  padding: 3px 15px;
+  background-color: #2980b9;
+  color: white;
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+}
+
+.delete-language {
+  display: inline-block;
+  background-color: #3498db;
+  vertical-align: middle;
+  padding: 3px 8px;
+  text-align: center;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+  a {
+    color: white;
+    text-decoration: none;
+  }
+  &:hover {
+    background-color: #5FB0E6;
+  }
+}
