--- a/app/assets/stylesheets/framework_and_overrides.css.scss
+++ b/app/assets/stylesheets/framework_and_overrides.css.scss
@@ -84,6 +84,7 @@ section {
 .language-relationship {
   display: inline-block;
   width: 158px;
+  opacity: 1;
   -webkit-transition: all 300ms cubic-bezier(0.420, 0.000, 1.000, 1.000);
      -moz-transition: all 300ms cubic-bezier(0.420, 0.000, 1.000, 1.000);
        -o-transition: all 300ms cubic-bezier(0.420, 0.000, 1.000, 1.000);
