--- a/app/views/language_relationships/destroy.js.erb
+++ b/app/views/language_relationships/destroy.js.erb
@@ -1,1 +1,2 @@
 $('#fluentLanguages').html('<%= escape_javascript( render partial: 'language_relationships/fluent_languages' ) %>');
+$('#learningLanguages').html('<%= escape_javascript( render partial: 'language_relationships/learning_languages' ) %>');
