--- a/app/views/language_relationships/create.js.erb
+++ b/app/views/language_relationships/create.js.erb
@@ -1,2 +1,4 @@
 $('#fluentLanguages').html('<%= escape_javascript( render partial: 'language_relationships/fluent_languages' ) %>');
 $('#learningLanguages').html('<%= escape_javascript( render partial: 'language_relationships/learning_languages' ) %>');
+$('#fluent_language').val("");
+$('#learning_language').val("");
