--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,69 +1,40 @@
-<div class="authform">
-  <h3>Edit <%= resource_name.to_s.humanize %></h3>
-  <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put, :role => 'form'}) do |f| %>
-    <%= devise_error_messages! %>
-    <div class="form-group">
-      <%= f.label :first_name %>
-      <%= f.text_field :first_name, class: 'form-control' %>
+<div>
+
+  <!-- Nav pills -->
+  <ul class="nav nav-pills" role="tablist">
+    <li role="presentation" class="active"><a href="#general" aria-controls="home" role="pill" data-toggle="pill">General</a></li>
+    <li role="presentation"><a href="#profile" aria-controls="profile" role="pill" data-toggle="pill">Profile</a></li>
+    <li role="presentation"><a href="#language" aria-controls="messages" role="pill" data-toggle="pill">Language</a></li>
+    <li role="presentation"><a href="#payments" aria-controls="settings" role="pill" data-toggle="pill">Payments</a></li>
+  </ul>
+
+  <!-- Tab panes -->
+  <div class="tab-content">
+    <div role="pillpanel" class="tab-pane active" id="general">
+      <%= render 'edit_form' %>
+
+      <div class="authform">
+      <h3>Cancel Account</h3>
+      <p>Unhappy? We'll be sad to see you go.</p>
+      <%= button_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete, :class => 'button right' %>
+      </div>
+
     </div>
-    <div class="form-group">
-      <%= f.label :last_name %>
-      <%= f.text_field :last_name, class: 'form-control' %>
-    </div>
-    <div class="form-group">
-      <%= f.label :location %>
-      <%= f.text_field :location, class: 'form-control', placeholder: 'Tokyo, Japan' %>
-    </div>
-    <div class="form-group">
-      <%= f.label :email %>
-      <%= f.email_field :email, class: 'form-control' %>
-      <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-        <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+    <div role="pillpanel" class="tab-pane" id="profile">
+      <% if current_user.coach? %>
+        <%= render 'coaches/edit' %>
+      <% end %>
+
+      <% if current_user.user? %>
+        <%= render 'learners/edit' %>
       <% end %>
     </div>
-    <fieldset>
-      <p>Leave these fields blank if you don't want to change your password.</p>
-      <div class="form-group">
-        <%= f.label :password %>
-        <%= f.password_field :password, :autocomplete => 'off', class: 'form-control' %>
-      </div>
-      <div class="form-group">
-        <%= f.label :password_confirmation %>
-        <%= f.password_field :password_confirmation, class: 'form-control' %>
-      </div>
-    </fieldset>
-    <fieldset>
-      <p>You must enter your current password to make changes.</p>
-      <div class="form-group">
-        <%= f.label :current_password %>
-        <%= f.password_field :current_password, class: 'form-control' %>
-      </div>
-    </fieldset>
-    <%= f.submit 'Update', :class => 'button right' %>
-  <% end %>
-</div>
+    <div role="pillpanel" class="tab-pane" id="language">
+      <%= render 'language_relationships/fluent_language_form' %>
 
-<%= render 'language_relationships/fluent_language_form' %>
-
-<%= unless current_user.coach? then render 'language_relationships/learning_language_form' end %>
-
-
-<% if current_user.coach? %>
-  <div class="authform">
-  <h3>Coaching Settings</h3>
-  <p></p>
+      <%= unless current_user.coach? then render 'language_relationships/learning_language_form' end %>
+    </div>
+    <div role="pillpanel" class="tab-pane" id="payments">...</div>
   </div>
-<% end %>
 
-<% if current_user.user? %>
-<div class="authform">
-  <h3>Learner Settings</h3>
-  <p></p>
-  </div>
-<% end %>
-
-<div class="authform">
-<h3>Cancel Account</h3>
-<p>Unhappy? We'll be sad to see you go.</p>
-<%= button_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete, :class => 'button right' %>
 </div>
