--- a/app/views/language_relationships/_learning_languages.html.erb
+++ b/app/views/language_relationships/_learning_languages.html.erb
@@ -3,7 +3,9 @@
   <div class="language-relationship">
     <p class="language-name"><%= relationship.language.english %></p>
     <div class="delete-language">
-      <%= link_to 'X', language_relationship_path(relationship.id), method: :delete, remote: true %>
+      <%= link_to language_relationship_path(relationship.id), method: :delete, remote: true do %>
+        <%= fa_icon "remove" %>
+      <% end %>
     </div>
   </div>
 <% end %>
