add banking and billing field to coach and learner models

--- a/app/views/coaches/_form.html.erb
+++ b/app/views/coaches/_form.html.erb
@@ -8,6 +8,6 @@
     <%= f.input :will_chat, label: 'I offer in-app chatting', class: 'form-control' %>
     <%= f.input :will_call, label: 'I accept phone call requests', class: 'form-control' %>
     <%= f.input :call_rate, placeholder: '$30', hint: 'All prices in U.S. Dollars please.', class: 'form-control' %>
-    <%= f.submit %>
+    <%= f.submit 'Update', class: 'btn btn-primary btn-lg btn-block' %>
   </div>
 <% end %>
