--- a/app/views/learners/_form.html.erb
+++ b/app/views/learners/_form.html.erb
@@ -4,6 +4,6 @@
   <div class="autform">
     <%= f.input :bio, class: 'big-textarea', placeholder: 'Tell us about you. This will help potential coaches.' %>
     <%= f.input :reason_why, class: 'form-control big-textarea', label: 'Why are you looking for a coach?', placeholder: 'Explain what your goals are, and why you are needing a coach most.' %>
-    <%= f.submit 'Update' %>
+    <%= f.submit 'Update', class: 'btn btn-primary btn-lg btn-block' %>
   </div>
 <% end %>
