--- a/app/views/devise/registrations/_edit_form.html.erb
+++ b/app/views/devise/registrations/_edit_form.html.erb
@@ -39,6 +39,6 @@
         <%= f.password_field :current_password, class: 'form-control' %>
       </div>
     </fieldset>
-    <%= f.submit 'Update', :class => 'button right' %>
+    <%= f.submit 'Update', class: 'btn btn-primary btn-lg btn-block' %>
   <% end %>
 </div>
