--- a/app/views/users/_coach_profile.html.erb
+++ b/app/views/users/_coach_profile.html.erb
@@ -15,6 +15,8 @@
 
 </div><!-- end speaks -->
 
+<%= YouTubeAddy.youtube_embed_url("#{@user.coach.video_url}",600,400).html_safe %>
+
 <div class="panel panel-default">
 
   <div class="panel-body">
