--- a/app/assets/stylesheets/testimonials.css.scss
+++ b/app/assets/stylesheets/testimonials.css.scss
@@ -1,3 +1,7 @@
 // Place all the styles related to the Testimonials controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+#user_star img, #star img {
+  display: inline-block;
+}
