--- a/app/views/testimonials/new.html.erb
+++ b/app/views/testimonials/new.html.erb
@@ -1,3 +1,17 @@
 <h1>New Testimonial</h1>
-<div class="user_star"></div>
+
 <%= render 'form' %>
+
+<script>
+  $('#user_star').raty({
+    rating: <%= @rating.rating %>,
+    path: '/assets',
+    click: function(rating, evt) {
+      $.ajax({
+        url: '/ratings/' + <%= @rating.id %>,
+        type: 'PATCH',
+        data: { rating: rating }
+      });
+    }
+  });
+</script>
