--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -1,9 +1,7 @@
 .profile-image {
-  width: 125px;
-  height: 125px;
-  background: black;
-  border-radius: 50%;
-  margin: 0 auto;
+  height: 150px;
+  width: 150px;
+  margin: 25px auto;
 }
 
 ul.languages {
