--- a/app/views/devise/registrations/_edit_form.html.erb
+++ b/app/views/devise/registrations/_edit_form.html.erb
@@ -1,7 +1,12 @@
 <div class="authform">
   <h3>Edit <%= resource_name.to_s.humanize %></h3>
-  <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put, :role => 'form'}) do |f| %>
+  <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put, :role => 'form', :multipart => true }) do |f| %>
     <%= devise_error_messages! %>
+    <div class="form-group">
+      <%= f.label :avatar %>
+      <%= image_tag @user.avatar.url(:thumb), class: 'user-avatar img-circle' %>
+      <%= f.file_field :avatar %>
+    </div>
     <div class="form-group">
       <%= f.label :first_name %>
       <%= f.text_field :first_name, class: 'form-control' %>
