--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -9,7 +9,7 @@
 </td>
 
 <td>
-  <% if !user.coach? %>
+  <% if !user.coach %>
     <%= form_for :coach, :url => { :controller => :coaches, :action => :create } do |f| %>
       <%= f.hidden_field :user_id, value: user.id %>
       <%= f.submit 'Create Coach', :class => 'button-xs' %>
