--- a/app/views/users/_learner_profile.html.erb
+++ b/app/views/users/_learner_profile.html.erb
@@ -35,7 +35,7 @@
 
   <div class="panel-body">
     <p><b>What I need help with</b></p>
-    <p><%= @user.learner.bio %></p>
+    <p><%= @user.learner.reason_why %></p>
   </div>
 
 </div>
