--- a/app/views/chat_messages/_chat_message.html.erb
+++ b/app/views/chat_messages/_chat_message.html.erb
@@ -1,6 +1,9 @@
-<div class="panel panel-default">
-  <div class="panel-body">
-    <%= chat_message.content %>
+<li class="<%= if (chat_message.user.id == current_user.id) then "self" else "other" end %>">
+  <div class="avatar">
+    <%= image_tag chat_message.user.avatar.url(:thumb), class: "img-circle" %>
   </div>
-  <div class="panel-footer"><%= chat_message.user.first_name %></div>
-</div>
+  <div class="messages">
+    <p><%= chat_message.content %></p>
+    <time datetime="<%= chat_message.created_at %>"><%= chat_message.user.first_name %> • <%= time_ago_in_words(chat_message.created_at) %></time>
+  </div>
+</li>
