--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -1,22 +1,26 @@
-<div class="container-fluid">
-  <div class="row">
-    <div class="col-md-6 col-md-offset-3">
-      <div id="chat_messages">
-        <%= render @chat_messages %>
-        <div class="messages-list"></div>
-      </div>
+<section class="chat-module">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-md-6 col-md-offset-3">
+        <div id="chat_messages">
+          <ol class="discussion">
+            <%= render @chat_messages %>
+            <div class="messages-list"></div>
+          </ol>
+        </div>
 
-      <div id="new_message" class="fixed text-center">
-        <%= form_for([@chat, ChatMessage.new], :html => { class: 'form-inline' }, remote: true) do |f| %>
-          <div class="form-group">
-            <div class="input-group">
-              <%= f.text_area :content, placeholder: "Send a message" %>
+        <div id="new_message" class="fixed text-center">
+          <%= form_for([@chat, ChatMessage.new], :html => { class: 'form-inline' }, remote: true) do |f| %>
+            <div class="form-group">
+              <div class="input-group">
+                <%= f.text_area :content, placeholder: "Send a message" %>
+              </div>
+              <%= f.submit "Send", class: "btn btn-sm btn-success" %>
             </div>
-            <%= f.submit "Send", class: "btn btn-sm btn-success" %>
-          </div>
-        <% end %>
-      </div>
-    </div><!-- end column -->
-  </div><!-- end row -->
+          <% end %>
+        </div>
+      </div><!-- end column -->
+    </div><!-- end row -->
+  </div>
 </div>
 
