set up for stripe payments

--- a/app/views/users/_coach_profile.html.erb
+++ b/app/views/users/_coach_profile.html.erb
@@ -61,7 +61,7 @@
     <p>$10 / week</p>
   </div>
   <div class="bottom">
-    <a href="#" class="btn btn-success btn-lg btn-block">Hire me</a>
+    <%= render 'subscriptions/new_subscription' %>
   </div>
 </div>
 
