--- a/app/views/scheduled_calls/_form.html.erb
+++ b/app/views/scheduled_calls/_form.html.erb
@@ -4,11 +4,7 @@
   <div class="authform">
     <div class="form-inputs">
       <%= f.input :call_details, :input_html => {:rows => 6} %>
-      <%= f.input :suggested_time_1, :as => :string %>
-      <%= f.input :suggested_time_2 %>
-      <%= f.input :suggested_time_3 %>
-      <%#= f.input :agreed_time %>
-      <%#= f.input :price %>
+      <%= f.hidden_field :price %>
     </div>
 
     <div class="form-actions">
@@ -22,8 +18,25 @@
 </div>
  -->
 <script type="text/javascript">
+  var currentDate = new Date();
   jQuery('#scheduled_call_suggested_time_1').datetimepicker({
-    format:'d.m.Y H:i',
-    inline:true
+    format:'m.d.Y H:i',
+    minDate: 0,
+    step: 15,
+    inline: true
+  });
+
+  jQuery('#scheduled_call_suggested_time_2').datetimepicker({
+    format:'m.d.Y H:i',
+    minDate: 0,
+    step: 15,
+    inline: true
+  });
+
+  jQuery('#scheduled_call_suggested_time_3').datetimepicker({
+    format:'m.d.Y H:i',
+    minDate: 0,
+    step: 15,
+    inline: true
   });
 </script>
