--- a/app/views/scheduled_calls/show.html.erb
+++ b/app/views/scheduled_calls/show.html.erb
@@ -1,16 +1,19 @@
 <p>
   <strong>Suggested time 1:</strong>
   <%= @scheduled_call.suggested_times.first.time %>
+  <%= link_to "Accept", {:controller => "suggested_times", :action => "accept", :time_id => @scheduled_call.suggested_times.first.id}, class: 'btn btn-sm btn-primary'  %>
 </p>
 
 <p>
   <strong>Suggested time 2:</strong>
   <%= @scheduled_call.suggested_times.second.time %>
+  <%= link_to "Accept", {:controller => "suggested_times", :action => "accept"}, :id => @scheduled_call.suggested_times.second.id, class: 'btn btn-sm btn-primary'  %>
 </p>
 
 <p>
   <strong>Suggested time 3:</strong>
   <%= @scheduled_call.suggested_times.last.time %>
+  <%= link_to "Accept", {:controller => "suggested_times", :action => "accept"}, :id => @scheduled_call.suggested_times.last.id, class: 'btn btn-sm btn-primary'  %>
 </p>
 
 <p>
