--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -1,2 +1,5 @@
-<h3>Welcome</h3>
-<p><%= link_to 'Users:', users_path %> <%= User.count %> registered</p>
+<% if current_user %>
+  <%= render 'users/dashboard' %>
+<% else %>
+ <%= render 'homepage' %>
+<% end %>
